Bugfix/E1-104 tab data BGColor Overlapping

--- a/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/_tabs.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/_tabs.scss
@@ -1498,6 +1498,17 @@
   }
 
   // 2nd vartion en
+
+  .container-fix__width {
+    .cmp_tabs--vertical {
+      &.cmp_tabs--vertical-whitebg {
+        .cmp-tabs {
+          align-items: stretch;
+          margin: toRem(16) 0;
+        }
+      }
+    }
+  }
 }
 
 .cmp_tabs--vertical .cmp-teaser__action-link {
